--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.0.0",
+    "express-session": "^1.17.3",
+    "mongodb": "^5.1.0",
     "mongoose": "^7.5.0"
   },
   "devDependencies": {
