--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "bson": "^6.1.0",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "^5.1.0",
+    "mongodb": "^5.9.0",
     "mongoose": "^7.5.0"
   },
   "devDependencies": {
